updated styles to correct overflow

--- a/src/Dispatch.Web/wwwroot/styles.css
+++ b/src/Dispatch.Web/wwwroot/styles.css
@@ -40,7 +40,9 @@ body {
 .app-shell {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: auto;
+  max-height: 100%;
 }
 
 .topbar {
@@ -104,6 +106,8 @@ body {
   padding: 20px;
   flex: 1;
   min-height: 0;
+  /* height:100%;
+  max-height:100%; */
 }
 
 .settings-page {
@@ -438,15 +442,25 @@ button,
   display: grid;
   gap: 16px;
   flex: 1;
-  min-height: 0;
-  max-height: 100vh;
+  /* max-height: 100vh; */
+  /* min-height: 0; */
+  /* max-height: 100vh; */
+    /* max-height: 100%; */
+  /* height:100vh;
+  overflow: auto; */
+
+      /* max-height: none; */
+    /* height: auto; */
+
 }
 
 .recording-day {
   border: 1px solid var(--border);
   border-radius: 12px;
-  overflow: hidden;
+  overflow: auto;
   background: rgba(255, 255, 255, 0.02);
+  /* max-height: 100%;
+  height:100%; */
 }
 
 .day-header {
@@ -476,6 +490,9 @@ button,
   display: grid;
   gap: 12px;
   padding: 12px;
+  /* overflow: auto;
+  height: 100%;
+  max-height:100%; */
 }
 
 .recording {
